Fix flickering on initial opening of menu, ref #40
Upon hard refresh, this will still wait for images to load, but that is
expected (all images on the page will do it). This fixes the flickering
that happens even after the images are cached.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -63,9 +63,11 @@
 	width: 32px;
 	height: 32px;
 }
-.emote-menu .emote img {
+.emote-menu .emote div {
 	max-width: 32px;
 	max-height: 32px;
+	background-repeat: no-repeat;
+	background-size: contain;
 
 	/* Center within container. Container must have a `position` other than `static`. */
 	margin: auto;
